--- a/views/student-class-details.ejs
+++ b/views/student-class-details.ejs
@@ -112,6 +112,9 @@
             <br>
             <br>
             <button onclick="window.location.href='/students/student-dashboard'">Back to Dashboard</button>
+            <% if (typeof message !== 'undefined' && message.trim()) { %>
+                <div class="message <%= messageType %>"><%= message %></div>
+            <% } %>
         </div>
     </div>
 </body>
