--- a/views/student-notifications.ejs
+++ b/views/student-notifications.ejs
@@ -44,6 +44,9 @@
             </div>
         <% }) %>
         <button type="submit">Submit</button>
+        <% if (typeof message !== 'undefined' && message.trim()) { %>
+            <div class="message <%= messageType %>"><%= message %></div>
+        <% } %>
     </form>
     <br>
     <button onclick="window.location.href='/students/student-dashboard'">Back to Dashboard</button>
